# sarif-python-om

./: .gitignore  GenerateSarifOm.cmd  README.rst  code-gen-hints.json  setup.cfg  setup.py
sarif_om/: Address.py  Artifact.py  ArtifactChange.py  ArtifactContent.py  ArtifactLocation.py  Attachment.py  CodeFlow.py  ConfigurationOverride.py  Conversion.py  Edge.py  EdgeTraversal.py  Exception.py  ExternalProperties.py  ExternalPropertyFileReference.py  ExternalPropertyFileReferences.py  Fix.py  Graph.py  GraphTraversal.py  Invocation.py  Location.py  LocationRelationship.py  LogicalLocation.py  Message.py  MultiformatMessageString.py  Node.py  Notification.py  PhysicalLocation.py  PropertyBag.py  Rectangle.py  Region.py  Replacement.py  ReportingConfiguration.py  ReportingDescriptor.py  ReportingDescriptorReference.py  ReportingDescriptorRelationship.py  Result.py  ResultProvenance.py  Run.py  RunAutomationDetails.py  SarifLog.py  (+67 more)
