[metadata]
name = sarif_om
author = Microsoft Corporation
author-email = v-lgold@microsoft.com
summary = Classes implementing the SARIF 2.1.0 object model.
home-page = https://github.com/microsoft/sarif-python-om
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 2.7
install_requires =
    attrs
    pbr

[files]
packages =
    sarif_om
